# aoc2022

./: README.md  main.py  pyproject.toml
day1/: day1.py
day2/: rock_paper_scissors.py
src/day1/: day1.py
src/day3/: find_items.py
src/day4/: camp_cleanup.py
tests/: __init__.py  test_day3.py  test_day4.py
